--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -718,6 +718,6 @@
 }
 
 //
-.single-post-meta {
+.single-post-item .single-post-meta {
   gap: 32px;
 }
